updated till 25th dec23